K8s/Istio/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: robotshop-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # default Istio controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: robotshop
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - robotshop-gateway
  http:
<<<<<<< HEAD
<<<<<<< HEAD
=======
  - match:
    - uri:
        prefix: /
>>>>>>> 68d59f62 (updated all helm charts and vlues and added service mesh and message broker)
=======
>>>>>>> 86581e6e (updated all helm charts and vlues and added service mesh and message broker)
  - route:
    - destination:
        host: web.default.svc.cluster.local
        port:
          number: 8080
